--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   </head>
   <body>
     <!-- Header Start -->
-    <header class="absolute top-0 left-0 z-10 flex w-full items-center bg-transparent">
+    <header class="absolute top-0 left-0 z-50 w-full items-center flex">
       <div class="container">
         <div class="relative flex items-center justify-between">
-          <div class="px-5">
-            <a href="#home" class="block py-6">
+          <div class="px-4">
+            <a href="#home" class="block items-center font-bold text-primary text-3xl md:2xl py-6">
               <!-- <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="60" height="60" viewBox="0 0 48 48">
                 <path fill="#14b8a6" d="M6,42V6h36v36H6z">
                   <animate attributeName="opacity" values="1;0.8;1" dur="2s" repeatCount="indefinite"/>
@@ -34,9 +34,7 @@
                   <animate attributeName="stroke-dasharray" from="1000" to="0" dur="2s" begin="0.5s" fill="freeze"/>
                 </path>
               </svg> -->
-                <span class="text-[3rem] md:text-[4rem] lg:text-[5rem] font-bold tracking-tight text-primary hover:text-dark dark:hover:text-white transition-all duration-300 leading-none font text-3xl">
                   RK
-                </span>
             </a>
           </div>
           <div class="flex items-center px-4">
@@ -90,17 +88,17 @@
         <div class="flex flex-wrap">
           <div class="w-full self-center px-4 lg:w-1/2">
             <h1 class="text-base font-semibold text-primary md:text-xl">Hello Everyone 🙌, I'm <span class="mt-2 block text-4xl font-bold text-dark dark:text-white lg:text-5xl">M. Rinko Wing Kurniawan</span></h1>
-            <h2 class="mb-10 text-lg font-medium text-secondary lg:text-2xl mt-2">Frontend & Beckend Developer  <span class="text-dark dark:text-white">| Coding with Passion!</span></h2>
+            <h2 class="mb-10 text-lg font-medium text-secondary dark:text-slate-400 lg:text-2xl mt-2">Frontend & Beckend Developer  <span class="text-dark dark:text-white">| Coding with Passion!</span></h2>
 
             <a href="#" class="rounded-full bg-primary py-3 px-8 text-base font-semibold text-white transition duration-300 ease-in-out hover:opacity-80 hover:shadow-lg ">Contact Me</a>
           </div>
           <div class="w-full self-end px-4 lg:w-1/2">
             <div class="relative mt-10 lg:right-0 lg:mt-9">
-              <img src="dist/img/sandhika.png" alt="Sandhika Galih" class="relative z-10 mx-auto max-w-full" />
+              <img src="dist/img/ayam.png" alt="Sandhika Galih" class="relative z-10 mx-auto max-w-full" />
               <span class="absolute bottom-0 left-1/2 -translate-x-1/2 md:scale-125">
-                <svg width="400" height="400" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+                <svg width="370" height="370" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
                   <path
-                    fill="#14b8a6"
+                    fill="#2b6cb0"
                     d="M47.4,-51C59.2,-35.6,65.1,-17.8,63.4,-1.7C61.7,14.5,52.6,28.9,40.8,36.6C28.9,44.2,14.5,45,-2,47C-18.4,49,-36.8,52.1,-45.4,44.5C-53.9,36.8,-52.5,18.4,-51.2,1.3C-49.9,-15.8,-48.7,-31.7,-40.2,-47.1C-31.7,-62.4,-15.8,-77.3,1,-78.3C17.8,-79.2,35.6,-66.3,47.4,-51Z"
                     transform="translate(100 100) scale(1.1)"
                   />
@@ -116,15 +114,16 @@
     <!-- About Section Start -->
     <section id="about" class="pt-36 pb-32 dark:bg-dark">
       <div class="container">
-        <div class="flex flex-wrap">
+        <div class="flex flex-wrap lg:flex-nowrap">
           <div class="mb-10 w-full px-4 lg:w-1/2">
             <h4 class="mb-3 text-2xl font-bold text-primary lg:text-2xl">About Me</h4>
-            <h2 class="mb-5 max-w-md text-3xl font-bold text-dark dark:text-white lg:text-4xl"></h2>
-            <p class="max-w-xl text-base font-medium text-secondary lg:text-lg">Hello! I'm M. Rinko Wing Kurniawan, a student with skills in Laravel, PHP, JavaScript and Tailwind CSS, born on April 28, 2009, passionate about technology and aspiring to become a professional programmer.</p>
+            <p class="max-w-xl text-base font-medium text-dark lg:text-lg dark:text-light lg:text-secondary">
+              Hello! I'm M. Rinko Wing Kurniawan, a student with skills in Laravel, PHP, JavaScript and Tailwind CSS, born on April 28, 2009, passionate about technology and aspiring to become a professional programmer.
+            </p>
           </div>
           <div class="w-full px-4 lg:w-1/2">
-            <h3 class="mb-4 text-2xl font-semibold text-dark dark:text-white lg:pt-5 lg:text-2xl">Contact Me</h3>
-            <p class="mb-6 text-base font-medium text-secondary lg:text-lg">
+            <h3 class="mb-3 text-2xl font-semibold text-dark dark:text-white lg:pt-2 lg:text-2xl hover:text-light text-primary">Contact Me</h3>
+            <p class="mb-6 text-base font-medium text-secondary dark:text-white lg:text-lg">
               Social media is the easiest way to contact me. You can also send me an email or call me directly.
             </p>
             <div class="flex items-center">
@@ -492,7 +491,7 @@
     <!-- Footer End -->
 
     <!-- Back to top Start -->
-    <a href="#home" class="fixed bottom-4 right-4 z-[9999] hidden h-14 w-14 items-center justify-center rounded-full bg-primary p-4 hover:animate-pulse" id="to-top">
+    <a href="#home" class="fixed bottom-4 right-4 z-[9999] hidden h-10 w-14 items-center justify-center rounded-full bg-primary p-4 hover:animate-pulse" id="to-top">
       <span class="mt-2 block h-5 w-5 rotate-45 border-t-2 border-l-2"></span>
     </a>
     <!-- Back to top End -->
