--- a/index.html
+++ b/index.html
@@ -70,17 +70,17 @@
     <section id="home" class="pt-36 sm:pt-24 md:pt-20 lg:pt-20 dark:bg-dark">
       <div class="container">
         <div class="flex flex-wrap">
-          <div class="w-full self-center px-4 lg:w-1/2">
+          <div class="w-full self-center px-4 lg:w-1/2 text-center md:text-left">
             <h1 class="text-base font-semibold text-primary md:text-xl">Hello Everyone 🙌, I'm <span class="mt-2 block text-4xl font-bold text-dark dark:text-white lg:text-5xl">M. Rinko Wing Kurniawan</span></h1>
             <h2 class="mb-10 text-lg font-medium text-secondary dark:text-slate-400 lg:text-2xl mt-2">Frontend & Beckend Developer  <span class="text-dark dark:text-white">| Coding with Passion!</span></h2>
 
             <a href="#" class="rounded-full bg-primary py-3 px-8 text-base font-semibold text-white transition duration-300 ease-in-out hover:opacity-80 hover:shadow-lg ">Contact Me</a>
           </div>
             <div class="w-full self-end px-4 lg:w-1/2">
-            <div class="relative mt-10 lg:right-0 lg:mt-9" style="margin-block: 80px;">
+            <div class="relative mt-10 lg:mt-9 lg:right-0 mb-10 lg:mb-20">
               <img src="dist/img/ayam.png" alt="My Profile" class="relative z-10 mx-auto max-w-full" />
-              <span class="absolute bottom-0 left-1/2 -translate-x-1/2  md:scale-125" style="top: -30px;">
-              <svg swidth="100%" height="100%" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+              <span class="absolute left-1/2 -translate-x-1/2 -top-8 sm:-top-10 md:scale-125">
+              <svg width="100%" height="100%" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
               <path
               fill="#2b6cb0"
               d="M47.4,-51C59.2,-35.6,65.1,-17.8,63.4,-1.7C61.7,14.5,52.6,28.9,40.8,36.6C28.9,44.2,14.5,45,-2,47C-18.4,49,-36.8,52.1,-45.4,44.5C-53.9,36.8,-52.5,18.4,-51.2,1.3C-49.9,-15.8,-48.7,-31.7,-40.2,-47.1C-31.7,-62.4,-15.8,-77.3,1,-78.3C17.8,-79.2,35.6,-66.3,47.4,-51Z"
